# claude-demo

./: .gitignore  README.md  demo.sh  pyproject.toml  requirements.txt
docs/: architecture.md  threat-model.md
examples/: cred_safety_demo.py  demo.py  optional_claude_demo.py  optional_openai_demo.py
examples/browser_research/: __init__.py  run.py  site.py  static_site.py
examples/cred_safety/: mock_backend.py  run.py
examples/data/: sample.csv
examples/research_assistant/: __init__.py  run.py
policies/: default.yaml  gov-airgapped.yaml  prod-restricted.yaml  research-mode.yaml
src/: __init__.py  agent.py  hooks.py  http_tool.py  scripted.py  state.py  tools.py
src/claude_demo/: __init__.py  __main__.py  sandbox.py
src/claude_demo/agents/: __init__.py  claude.py  openai.py  scripted.py
src/claude_demo/audit/: __init__.py  log.py
src/claude_demo/cli/: __init__.py  __main__.py  audit.py  redteam.py  run.py  tui.py
src/claude_demo/core/: __init__.py  permissions.py  workflow.py
src/claude_demo/mcp/: __init__.py  adapter.py  client.py  stub_server.py
src/claude_demo/policy/: __init__.py  evaluator.py  loader.py  schema.py
src/claude_demo/proxy/: __init__.py  browser.py  credential.py
src/claude_demo/redteam/: __init__.py  runner.py  scenarios.py
src/claude_demo/tools/: __init__.py  _browser_iface.py  _fake_browser.py  _playwright_browser.py  base.py  browser.py  code.py  file.py  http.py
src/claude_demo/ui/: __init__.py  console.py
src/claude_demo/ui/tui/: __init__.py  app.py
tests/: test_audit.py  test_browser_tool.py  test_cli.py  test_cred_proxy.py  test_hooks.py  test_mcp.py  test_openai_runner.py  test_permissions.py  test_playwright_browser.py  test_policy.py  test_redteam.py  test_sandbox.py  test_scripted.py  test_tools.py  test_tui_helpers.py  test_workflow.py
